src/test/regression_testing/test_files/Go/NPD/bad/test05.go
package main

import "fmt"

func main() {
    var f func()
    f()
}